fixed responsive on small devices resolution

--- a/client/Components/navbar/navbar.css
+++ b/client/Components/navbar/navbar.css
@@ -11,7 +11,18 @@ nav {
 }
 
 .navbar_logo {
-  margin-right: 44px;
+  /* margin-right: 44px; */
+}
+
+@media only screen and (max-width: 350px) {
+  nav ul a {
+    transition: background-color .3s;
+    font-size: 1rem;
+    color: #fff;
+    display: block;
+    padding: 0 0px;
+    cursor: pointer;
+  }
 }
 
 .nav-wrapper{
